Code-Bereinigung und Sicherheits-Updates
- Token in separate config.py ausgelagert (nicht im Repository)
- Alle Kommentare aus dem Code entfernt
- .gitignore erweitert (config.py, PROJEKT_ÜBERSICHT.md, .claude/)
- Interne Dokumentation aus Repository entfernt
- Code-Struktur und Funktionalität beibehalten

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@ Thumbs.db
 # Project specific
 *.log
 .env
+config.py
+
+# Documentation (internal)
+PROJEKT_ÜBERSICHT.md
+
+# Claude Code
+.claude/
